@@ -73,11 +73,17 @@ static void update_check(gint type)
 {
 	SoupSession *soup;
 	SoupMessage *msg;
+	gchar *user_agent = g_strconcat("Updatechecker ", VERSION, " at Geany ", 
+									 GEANY_VERSION, NULL);
 
 	g_message("Starting checking for updates");
-	soup = soup_session_async_new ();
-	msg = soup_message_new ("GET", "http://geany.org/service/version.php");
+	soup = soup_session_async_new_with_options(SOUP_SESSION_USER_AGENT, 
+			user_agent, NULL);
 
+	g_free(user_agent);
+	
+	msg = soup_message_new ("GET", "http://geany.org/service/version.php");
+	
 	soup_session_queue_message (soup, msg, update_check_result_cb, GINT_TO_POINTER(type));
 }
 
